--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="Main.js"></script>
+		<script src="/bundled.js"></script>
 	</body>
 </html>
